src/snapshots/avdl__compiler__tests__import_resolution_error_has_source_span.snap
---
source: src/compiler.rs
expression: stable
---
  x import not found: nonexistent-file.avsc (searched: <cwd>)
   ,-[<input>:3:17]
 2 |             protocol P {
 3 |                 import schema "nonexistent-file.avsc";
   :                 ^^^|^^
   :                    `-- import not found: nonexistent-file.avsc (searched: <cwd>)
 4 |             }
   `----
