src/snapshots/avdl__compiler__tests__imported_avsc_undefined_type_includes_file_path.snap
---
source: src/compiler.rs
expression: stable
---
  x Undefined name: UnknownType
   ,-[<tmpdir>/test.avdl:2:3]
 1 | protocol Test {
 2 |   import schema "bad.avsc";
   :   ^^^|^^
   :      `-- this import contains undefined type references
 3 | }
   `----
  help: the undefined type(s) may be referenced in imported file(s): <tmpdir>/bad.avsc
