src/snapshots/avdl__compiler__tests__record_default_wrong_field_type_rejected.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Invalid default for field `inner` in `test.Outer`: invalid value for field
  | `count`: expected int, got string
   ,-[<input>:5:46]
 4 |                 record Inner { int count; }
 5 |                 record Outer { Inner inner = {"count": "not_an_int"}; }
   :                                              |
   :                                              `-- Invalid default for field `inner` in `test.Outer`: invalid value for field `count`: expected int, got string
 6 |             }
   `----
